2003-01-30  Chris Blumenberg  <cblu@apple.com>

	Fixed: 3161102 - Avoid retain cycles by destroying plug-ins in the page cache before dealloc

        Reviewed by rjw.

        * History.subproj/WebHistoryItem.m:
        (+[WebHistoryItem _releaseAllPendingPageCaches]): iterate over all of the plug-ins and call destroy
        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView windowWillClose:]): clear page cache

2003-01-30  Chris Blumenberg  <cblu@apple.com>

	Fixed: 3160464 - Slideback sometimes happens twice

	Because we start drags in mouseDragged (which AppKit says we shouldn't), we get mouseDragged events after a drag (image, link, text etc) has ended. We also get mouseDragged events after we've sent the fake mouseUp to WebCore. That is probably bad for unknown reasons.

        Reviewed by darin.

        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView mouseDown:]): set ignoringMouseDraggedEvents to NO
        (-[WebHTMLView mouseDragged:]): check ignoringMouseDraggedEvents
        (-[WebHTMLView draggedImage:endedAt:operation:]): set ignoringMouseDraggedEvents to NO
        * WebView.subproj/WebHTMLViewPrivate.h: added ignoringMouseDraggedEvents

2003-01-30  Darin Adler  <darin@apple.com>

        Reviewed by John.

        - fixed 3160710 -- REGRESSION: bizrate.com front page ad in wrong position

        The new code to compute port coordinates was screwing up somehow.
        I had to roll it out and we'll have to try again to fix the problem Ed was fixing.

        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView saveAndSetPortStateForUpdate:]):
        Roll back changes between 1.45 and 1.47.

2003-01-29  Darin Adler  <darin@apple.com>

        Reviewed by John.

	- fixed 3158624 -- crash reentering WebBaseNetscapePluginView removeTrackingRect closing window

        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView removeTrackingRect]):